--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -127,9 +127,9 @@
                         <div class="col-12 col-lg-9">
                             <form>
                                 {{#currentUser}}
-                                <div style="display:flex">
-                                    <img style="width:48px;border-radius:50%" src="{{{currentUser.image}}}=s96-c" />
-                                    <h5>Welcome Back {{currentUser.username}}!</h5>
+                                <div class="mb-3" style="display:flex">
+                                    <img style="width:32px;height:32px;border-radius:50%" src="{{{currentUser.image}}}=s96-c" />
+                                    <h5>Welcome {{currentUser.username}}!</h5>
                                 </div>
                                 {{/currentUser}}
 
