--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -128,7 +128,7 @@
                             <form>
                                 {{#currentUser}}
                                 <div class="mb-3" style="display:flex">
-                                    <img style="width:32px;height:32px;border-radius:50%" src="{{{currentUser.image}}}=s96-c" />
+                                    <img class="mr-2" style="width:32px;height:32px;border-radius:50%" src="{{{currentUser.image}}}=s96-c" />
                                     <h5>Welcome {{currentUser.username}}!</h5>
                                 </div>
                                 {{/currentUser}}
