link to account page

--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -128,8 +128,10 @@
                             <form>
                                 {{#currentUser}}
                                 <div class="mb-3" style="display:flex">
-                                    <img class="mr-2" style="width:32px;height:32px;border-radius:50%" src="{{{currentUser.image}}}=s96-c" />
-                                    <h5>Welcome {{currentUser.username}}!</h5>
+                                    <a href="/me">
+                                        <img class="mr-2" style="width:32px;height:32px;border-radius:50%" src="{{{currentUser.image}}}=s96-c" />                                    
+                                    </a>
+                                    <h5>Welcome <a href="/me">{{currentUser.username}}</a>!</h5>
                                 </div>
                                 {{/currentUser}}
 
