--- a/views/landing.mustache
+++ b/views/landing.mustache
@@ -155,7 +155,7 @@
                                 </div>
                                 <div class="form-row form-group">
                                     <div id="btn-launch-site-container" class="col text-center">
-                                        <button id="btn-launch-site" class="btn btn-block btn-success btn-lg mt-3" type="submit">Create Your Site</button>
+                                        <button id="btn-launch-site" class="btn btn-block btn-success btn-lg" type="submit">Create Your Site</button>
                                     </div>
                                 </div>
                                 <div class="text-center">
